[gd_scene load_steps=58 format=3 uid="uid://cc2wi7kom0g6v"]

[ext_resource type="Script" path="res://characters/enemies/gravioleira/gravioleira.gd" id="1_f8qwh"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="1_xl1q2"]
[ext_resource type="Script" path="res://characters/actions/move_to_target.gd" id="2_asjem"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence.gd" id="3_1wt8o"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector_reactive.gd" id="3_85yik"]
[ext_resource type="Script" path="res://addons/beehave/blackboard.gd" id="3_y8ny6"]
[ext_resource type="Script" path="res://addons/beehave/nodes/leaves/blackboard_set.gd" id="4_fyquc"]
[ext_resource type="Script" path="res://characters/conditions/area2d_colliding.gd" id="5_0ojys"]
[ext_resource type="Script" path="res://characters/actions/set_enemy_target.gd" id="5_btms8"]
[ext_resource type="Script" path="res://addons/beehave/nodes/leaves/blackboard_compare.gd" id="5_gt226"]
[ext_resource type="Script" path="res://characters/actions/attack.gd" id="5_sh4hf"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="7_befo8"]
[ext_resource type="Script" path="res://characters/actions/jump_back.gd" id="7_kn513"]
[ext_resource type="Script" path="res://characters/actions/wait_signal.gd" id="12_7e5mn"]
[ext_resource type="Texture2D" uid="uid://c452iejm0rq3k" path="res://characters/enemies/gravioleira/sprites/gravioleira_idle-Sheet.png" id="12_kubn8"]
[ext_resource type="Texture2D" uid="uid://dgesvayy4w4w5" path="res://characters/enemies/gravioleira/sprites/gravioleira_punch_combo-Sheet.png" id="13_ywd2k"]
[ext_resource type="Script" path="res://characters/conditions/random.gd" id="14_3h13o"]
[ext_resource type="Texture2D" uid="uid://cd7dphiq1o84o" path="res://characters/enemies/gravioleira/sprites/gravioleira_walk-Sheet.png" id="14_174ga"]
[ext_resource type="Script" path="res://characters/actions/wait_secs.gd" id="15_d6kn7"]
[ext_resource type="Script" path="res://addons/beehave/nodes/decorators/time_limiter.gd" id="15_p4kpa"]
[ext_resource type="Script" path="res://characters/actions/running.gd" id="17_eknx4"]
[ext_resource type="Texture2D" uid="uid://ba2u0ubsvkws8" path="res://characters/enemies/gravioleira/sprites/gravioleira_fallen-Sheet.png" id="19_6heqv"]
[ext_resource type="Texture2D" uid="uid://17idppamwtek" path="res://characters/enemies/gravioleira/sprites/gravioleira_gettup-Sheet.png" id="20_rreu2"]
[ext_resource type="Script" path="res://characters/enemies/gravioleira/attack.gd" id="26_3w22h"]
[ext_resource type="PackedScene" uid="uid://c6gb10qkoj7bx" path="res://characters/components/damage.tscn" id="27_qkout"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45cbs"]
size = Vector2(20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_kti22"]
atlas = ExtResource("19_6heqv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rldcl"]
atlas = ExtResource("20_rreu2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukx5n"]
atlas = ExtResource("12_kubn8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cql62"]
atlas = ExtResource("12_kubn8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm87o"]
atlas = ExtResource("12_kubn8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_becep"]
atlas = ExtResource("12_kubn8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3vjh"]
atlas = ExtResource("12_kubn8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2ur1"]
atlas = ExtResource("12_kubn8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_snalk"]
atlas = ExtResource("13_ywd2k")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_csrea"]
atlas = ExtResource("13_ywd2k")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xby31"]
atlas = ExtResource("13_ywd2k")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub3ug"]
atlas = ExtResource("13_ywd2k")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vclg"]
atlas = ExtResource("13_ywd2k")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mipa"]
atlas = ExtResource("13_ywd2k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4p2c"]
atlas = ExtResource("13_ywd2k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10a1t"]
atlas = ExtResource("13_ywd2k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcd1v"]
atlas = ExtResource("13_ywd2k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2cti"]
atlas = ExtResource("14_174ga")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c1t7"]
atlas = ExtResource("14_174ga")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jbbc"]
atlas = ExtResource("14_174ga")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1am7k"]
atlas = ExtResource("14_174ga")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qqmd"]
atlas = ExtResource("14_174ga")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8e2j"]
atlas = ExtResource("14_174ga")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k6ns"]
atlas = ExtResource("14_174ga")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ihkf"]
atlas = ExtResource("14_174ga")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwpln"]
atlas = ExtResource("14_174ga")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih2s0"]
atlas = ExtResource("14_174ga")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j14qf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kti22")
}],
"loop": true,
"name": &"fall_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rldcl")
}],
"loop": true,
"name": &"get_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukx5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cql62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm87o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_becep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3vjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2ur1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snalk")
}],
"loop": true,
"name": &"jump_back",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_csrea")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xby31")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ub3ug")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3vclg")
}],
"loop": false,
"name": &"left_punch",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_1mipa")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j4p2c")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_10a1t")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_gcd1v")
}],
"loop": false,
"name": &"right_punch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2cti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c1t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jbbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1am7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qqmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8e2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k6ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ihkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwpln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih2s0")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llqa6"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtlhh"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ho6pt"]
size = Vector2(26, 20)

[node name="Gravioleira" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_f8qwh")

[node name="BeehaveTree" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("1_xl1q2")
blackboard = NodePath("../Blackboard")
actor = NodePath("..")

[node name="SelectorReactiveComposite" type="Node" parent="BeehaveTree"]
script = ExtResource("3_85yik")

[node name="Damage" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("3_1wt8o")

[node name="CheckDamageTrue" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage"]
script = ExtResource("5_gt226")
left_operand = "get_value(\"damage\")"
right_operand = "true"

[node name="WaitCooldown" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage"]
script = ExtResource("7_befo8")

[node name="FallDownAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown"]
script = ExtResource("3_1wt8o")

[node name="CheckFallDownTrue" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction"]
script = ExtResource("5_gt226")
left_operand = "get_value(\"fall_down\")"
right_operand = "true"

[node name="JumpBackAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction"]
script = ExtResource("7_kn513")
impulse = Vector2(300, -200)

[node name="WaitGetUp" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction" node_paths=PackedStringArray("node")]
script = ExtResource("12_7e5mn")
node = NodePath("../../../../../../Turnable/Damage")
signal_to_wait = &"get_up"

[node name="SetFallDownToFalse" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction"]
script = ExtResource("4_fyquc")
key = "\"fall_down\""
value = "false"

[node name="WaitCooldownEnd" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown" node_paths=PackedStringArray("node")]
script = ExtResource("12_7e5mn")
node = NodePath("../../../../../Turnable/Damage")
signal_to_wait = &"cooldown_end"

[node name="SetDamageToFalse" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage"]
script = ExtResource("4_fyquc")
key = "\"damage\""
value = "false"

[node name="ReachPlayer" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("3_1wt8o")

[node name="SetEnemyTargetAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer"]
script = ExtResource("5_btms8")

[node name="ReachPlayerCondition" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer" node_paths=PackedStringArray("area")]
script = ExtResource("5_0ojys")
area = NodePath("../../../../Turnable/PlayerReach")
group = &"players"

[node name="ReachedPlayer" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer"]
script = ExtResource("7_befo8")

[node name="Attack" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer"]
script = ExtResource("3_1wt8o")

[node name="RandomConditon" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer/Attack"]
script = ExtResource("14_3h13o")
success_chance = 0.8

[node name="WaitSecsAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer/Attack"]
script = ExtResource("15_d6kn7")
time = ".2"

[node name="AttackAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer/Attack"]
script = ExtResource("5_sh4hf")

[node name="JumpBackAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer/Attack"]
script = ExtResource("7_kn513")

[node name="SequenceComposite" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer"]
script = ExtResource("3_1wt8o")

[node name="WaitSecsAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer/SequenceComposite"]
script = ExtResource("15_d6kn7")
time = ".1"

[node name="JumpBackAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/ReachedPlayer/SequenceComposite"]
script = ExtResource("7_kn513")

[node name="TimeLimiterDecorator" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("15_p4kpa")
wait_time = 1.0

[node name="Act" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator"]
script = ExtResource("7_befo8")

[node name="MoveToPlayer" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act"]
script = ExtResource("3_1wt8o")

[node name="RandomConditon" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act/MoveToPlayer"]
script = ExtResource("14_3h13o")
success_chance = 0.6

[node name="MoveToTargetAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act/MoveToPlayer"]
script = ExtResource("2_asjem")

[node name="RunningACtion" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act"]
script = ExtResource("17_eknx4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 22.5)
shape = SubResource("RectangleShape2D_45cbs")

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("3_y8ny6")

[node name="Turnable" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Turnable"]
texture_filter = 1
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_j14qf")
animation = &"walk"
autoplay = "idle"
speed_scale = 2.0

[node name="PlayerReach" type="Area2D" parent="Turnable"]
position = Vector2(14, -11)
collision_layer = 8

[node name="PunchCollision" type="CollisionShape2D" parent="Turnable/PlayerReach"]
shape = SubResource("RectangleShape2D_llqa6")

[node name="Attack" type="Area2D" parent="Turnable" groups=["enemies"]]
collision_layer = 8
script = ExtResource("26_3w22h")

[node name="PunchCollision" type="CollisionShape2D" parent="Turnable/Attack"]
position = Vector2(14, -11)
shape = SubResource("RectangleShape2D_dtlhh")
disabled = true

[node name="Delay" type="Timer" parent="Turnable/Attack"]
wait_time = 0.1
one_shot = true

[node name="Damage" parent="Turnable" groups=["enemies"] instance=ExtResource("27_qkout")]
collision_layer = 4
collision_mask = 2
damage_group = &"players"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turnable/Damage"]
position = Vector2(1, -7)
shape = SubResource("RectangleShape2D_ho6pt")

[connection signal="animation_finished" from="Turnable/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Turnable/PlayerReach" to="." method="_on_player_reach_area_entered"]
[connection signal="body_entered" from="Turnable/Attack" to="." method="_on_attack_body_entered"]
[connection signal="cooldown_end" from="Turnable/Damage" to="." method="_on_damage_cooldown_end"]
[connection signal="damage_taken" from="Turnable/Damage" to="." method="_on_damage_damage_taken"]
[connection signal="fall_down" from="Turnable/Damage" to="." method="_on_damage_fall_down"]
[connection signal="get_up" from="Turnable/Damage" to="." method="_on_damage_get_up"]
[connection signal="start_get_up" from="Turnable/Damage" to="." method="_on_damage_start_get_up"]
